@@ -6,8 +6,9 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-58] added zabbix[{history_log,history_text,history_uint,trends_uint}] internal checks (asaveljevs)
  - [ZBX-2446] fixed compilation on AIX 5.3 with OS level 5300-05 or earlier (Sasha)
- - [ZBX-2027] fixed selecting wrong host after canceling trigger comment  (Vedmak)
+ - [ZBX-2027] fixed selecting wrong host after canceling trigger comment (Vedmak)
  - [ZBX-2253] fixed delete confirmation dialog refer to empty element (Vedmak)
  - [ZBX-2370] fixed duration value in monitoring events for multiple problem triggers (Vedmak)
  - [ZBX-507] made UserParameters work with zabbix_agent(d) -p and -t (asaveljevs)
